@@ -164,6 +164,7 @@ duplicate_media_upload "A media object with the filename '$filename' already exi
 <Module "Krang::CGI::Media::BulkUpload">
   no_file                           "No file chosen."
   invalid_file_type                 "Uploaded file must be of type .zip, .tar, or .sit."
+  integer_dimensions_only           "Maximum $dimension must contain only whole numbers.  No periods, letters, or other special characters are allowed."
   problems_opening                  "Problems opening retired file.  Please make sure it is a valid zip, tar, or stuffit file."
   bad_category                      "The file you uploaded contains a folder ($url) that does not correspond to any of the existing sites/categories. If you would like us to create the new sites/categories for you, please click the \"Create New Categories\" and upload the file again."
   media_in_root                     "Archive contains files in the root and no site/category was chosen.  Media can exist only under a site/category.  Archive refused."
